[package]
name = "rustatic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
axum = "0.7.3"
mime_guess = "2.0.4"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "fs"] }
tower-http = { version = "0.5.0", features = ["fs"] }
